# expert

./: .cursorrules  .gitignore  .gitmodules  .rulebook  AGENTS.md  CHANGELOG.md  LICENSE  README.md  prompt.txt  tmp_test_log.txt
cli/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.train  README.md  expert_trainer.py  pyproject.toml  requirements.txt
cli/.github/workflows/: codespell.yml  release-artifacts.yml  rust-lint.yml  rust.yml
cli/docs/: ADAPTER_MERGING_TODO.md  INSTALLATION.md
cli/scripts/: INSTALL.sh  POWERSHELL_SCRIPTS.md  README.md  benchmark_quality.py  build-cuda.ps1  check_cuda.py  check_safetensors_keys.py  compare_inference.py  compare_outputs.py  compare_rust_python.ps1  copy-python-dlls.ps1  debug_embeddings.py  debug_kv_cache.py  debug_qwen3_layers.py  debug_tokens.py  install.ps1  paged_kv_cache.py  prompt_templates.py  rebuild-force.ps1  rebuild-quick.ps1  rebuild-with-dlls.ps1  setup_windows.ps1  test-adapter-impact.ps1  test-comprehensive.ps1  test-deterministic.ps1  test-generalist.ps1  test-oneshot.ps1  test-router-functional.ps1  test-routing.ps1  test_expert.ps1  test_generation.py  test_inference.ps1  test_rust_generation.ps1  test_simple_gen.py  test_unsloth_detection.py  train.ps1  train_direct.ps1  train_windows.ps1
cli/src/: config.rs  error.rs  expert_router.rs  lib.rs  main.rs  manifest.rs  model_detection.rs  python_bridge.rs  registry.rs
cli/src/commands/: chat.rs  dataset.rs  dataset_stats.rs  dataset_validate.rs  install.rs  list.rs  mod.rs  package.rs  (+7 more)
cli/tests/: README.md  benchmarks_tests.rs  chat_test.rs  commands_tests.rs  core_tests.rs  dataset_command_tests.rs  dependency_resolution_tests.rs  error_message_tests.rs  inference_tests.rs  install_tests.rs  integration_tests.rs  list_command_tests.rs  manifest_feature_tests.rs  manifest_tests.rs  model_detection_tests.rs  package_command_tests.rs  package_integration_tests.rs  registry_tests.rs  router_tests.rs  run_all_tests.ps1  sign_command_tests.rs  test_adapters.py  test_generation.rs  test_hot_swap.rs  test_integration.rs  test_keyword_routing.rs  test_latency_benchmarks.rs  test_lora.rs  test_multi_expert.rs  test_paged_kv_cache.py  test_qwen.rs  test_router.rs  test_soft_prompts.py  test_vram_profiling.rs  train_command_tests.rs  update_command_tests.rs  validation_integration_tests.rs
cli/tests_python/: README.md  __init__.py  run_tests.ps1  test_adapter_setup.py  test_adapters.py  test_callbacks.py  test_config.py  test_dataset_loader.py  test_model_loader.py  test_progress_testing.py  test_soft_prompts.py  test_trainer.py  test_training_optimizations.py
cli/train/: __init__.py  adapter_setup.py  callbacks.py  config.py  dataset_loader.py  model_loader.py  progress_testing.py  trainer.py
(+128 files in other folders)
